2004-01-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_texinfo_file): Do not compare $outfile to ''
	as $outfile might not be defined at all.

	* lib/Automake/Variable.pm (define): Rework the way we check
	Automake variable definition.  Ensure consistent :=/+=/=
	definitions only for variables that have been and are defined by
	Automake, and make it an internal error.  Ignore Automake
	attempts to touch a user variable, even with += assignments.
	* tests/txinfo29.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo29.test.
	Reported by Bruce Korb.

2004-01-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/libtool5.test, tests/ltcond.test, tests/ltcond2.test,
	* tests/ltconv.test: Run automake with --add-missing, because
	the CVS version of libtoolize no longer install config.sub and
	config.guess by default.

	Fix for PR automake/319:
	* aclocal.in (scan_m4_files): Scan configure.ac.
	(trace_used_macros, write_aclocal): Remove configure.ac from the
	list of files to include.
	* tests/Makefile.am (TESTS): Add acloca15.test.
	* tests/acloca15.test: New file.

	* aclocal.in (%file_includes): New variable.
	(scan_configure_dep): Compile $m4_include_rx and $ac_require_rx once.
	(scan_file): Scan for included files, and process these files
	recursively.  Fill %file_includes and %file_contents.  Return the
	list of included files, not the contents.
	(scan_m4_files): Adjust calls to scan_files.
	(strip_redundant_includes): New function.
	(trace_used_macros): Call it.
	(write_aclocal): Likewise.  Also check the mtime of included files.
	* tests/Makefile.am (TESTS): Add acloca14.test.
	* tests/acloca14.test: New file.
	Report from Phil Edwards.

2003-12-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (@common_files): Move configure, configure.ac, and
	configure.in ...
	(@common_sometimes): ... here so that these files do not appear
	twice in DIST_COMMON.

	* automake.in (maybe_push_required_file): Add $(srcdir) in front