@@ -1,4 +1,4 @@
-@set UPDATED 2 January 2004
-@set UPDATED-MONTH January 2004
+@set UPDATED 26 December 2003
+@set UPDATED-MONTH December 2003
 @set EDITION 1.8.0a
 @set VERSION 1.8.0a
