@@ -1,3 +1,10 @@
+2004-01-04  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* m4/mkdirp.m4: Do not use `-m 0755'.  This overrides special bits
+	and break setups where 775 directories are expected.  Just obey
+	umask as we did in the past.
+	Report from Harlan Stenn.
+
 2004-01-03  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (scan_texinfo_file): Do not compare $outfile to ''
